Implement compressed format for predictions table in mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,3 +81,17 @@ html {
 .text-yellow {
   color: #E5C685;
 }
+
+.text-gray {
+  color: gray;
+}
+
+.text-gray-small {
+  color: gray;
+  font-size: 12px;
+}
+
+.text-gray-extra-small {
+  color: gray;
+  font-size: xx-small;
+}
