--- a/app/assets/stylesheets/users/dashboard_v2.scss
+++ b/app/assets/stylesheets/users/dashboard_v2.scss
@@ -222,3 +222,10 @@
   padding-top: 10px;
 }
 
+.prediction-table__result-icon {
+  padding: 1px;
+}
+
+.prediction-table__help-text {
+  padding: 3px !important;
+}
