--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,9 +23,8 @@ html lang='en'
                   a.nav-link.white-text href=root_path Dashboard
                 li.nav-item.navbar-nav__nav-item
                   a.nav-link.white-text href=leaderboard_path Leaderboard
-              li.nav-item.navbar-nav__nav-item
-                a.nav-link.white-text href=rules_path Rules
-              - if current_user
+                li.nav-item.navbar-nav__nav-item
+                  a.nav-link.white-text href=rules_path Rules
                 li.nav-item.navbar-nav__nav-item.d-lg-none
                   = link_to('Edit Profile', edit_user_registration_path, class: 'nav-link white-text')
                 li.nav-item.navbar-nav__nav-item.d-lg-none
@@ -35,4 +34,9 @@ html lang='en'
                   .dropdown-menu.navbar__dropdown-menu.dropdown-menu-right aria-labelledby="navbarDropdown"
                     = link_to('Edit Profile', edit_user_registration_path, class: 'nav-item white-text dropdown-item')
                     = link_to('Logout', destroy_user_session_path, method: :delete, class: 'nav-item white-text dropdown-item')
+              - else
+                li.nav-item.navbar-nav__nav-item
+                  a.nav-link.white-text href=rules_path Rules
+                li.nav-item.navbar-nav__nav-item
+                  = link_to('Login', new_user_session_path, class: 'nav-link white-text')  
     = yield
