Increase button height for predictions table toggle button

--- a/app/assets/stylesheets/users/dashboard_v2.scss
+++ b/app/assets/stylesheets/users/dashboard_v2.scss
@@ -201,6 +201,8 @@
 .prediction-table__toggle-bar {
   background-color: #015386;
   color: white;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .prediction-table__toggle-btn {
