Change no prediction status from N/A to a -

--- a/app/views/user/dashboard_v2/_predictions_table.html.slim
+++ b/app/views/user/dashboard_v2/_predictions_table.html.slim
@@ -81,7 +81,7 @@
                   - results[match.id].each do |result|
                     - user = User.find(result[:user_id])
                     - user_prediction = Prediction.where(user_id: result[:user_id], match_id: match.id).first
-                    - prediction_text = user_prediction.present? ? user_prediction.short_text : 'N/A'
+                    - prediction_text = user_prediction.present? ? user_prediction.short_text : '-'
                     - icon_for_result = result[:match_result] ? right_prediction_icon : wrong_prediction_icon
                     - icon_for_score = result[:score] ? right_prediction_icon : wrong_prediction_icon
                     - icon_for_decider = result[:decider] ? right_prediction_icon : wrong_prediction_icon
@@ -91,7 +91,7 @@
                         .text-gray-small #{prediction_text}
                       td.d-none.d-md-table-cell #{user.nick_name}
                       - user_prediction = Prediction.where(user_id: result[:user_id], match_id: match.id).first
-                      - prediction_text = user_prediction.present? ? user_prediction.short_text : 'N/A'
+                      - prediction_text = user_prediction.present? ? user_prediction.short_text : '-'
                       td.d-none.d-md-table-cell #{prediction_text}
                       td.d-none.d-md-table-cell
                         i.fa class='#{icon_for_result}'
