--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html lang='en'
     = csrf_meta_tags
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    link rel="icon" href=image_url('Football_icon.jpg')
+    link rel="icon" href=image_url('football-icon.png')
   body.body-with-bg
     header.header-bg
       .container
