--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -7,6 +7,6 @@ html lang='en'
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    link rel="icon" href=image_url('Football_icon.jpg')
+    link rel="icon" href=image_url('football-icon.png')
   body.body-with-bg.body-with-bg--zabivaka
     = yield
