--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,7 @@ html lang='en'
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     link rel="icon" href=image_url('football-icon.png')
-  body.body-with-bg
+  body.body
     header.header-bg
       .container
         nav.navbar.navbar-expand-lg.navbar-light.rounded-bottom
