--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -8,5 +8,5 @@ html lang='en'
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     link rel="icon" href=image_url('football-icon.png')
-  body.body-with-bg.body-with-bg--zabivaka
+  body.body-with-bg
     = yield
