--- a/app/views/user/dashboard_v2/_predictions_table.html.slim
+++ b/app/views/user/dashboard_v2/_predictions_table.html.slim
@@ -1,6 +1,6 @@
 .predictions-table__container
   .row#predictions-table__header
-    - prediction = current_user.predictions.where(match: match).first
+    - prediction = @presenter.prediction(match)
     .col-md-6.my-3.predictions-table-header__left-pane
       - if match.completed?
         div #{@presenter.match_status_text(match)}
@@ -79,8 +79,8 @@
 
                 tbody.text-center
                   - results[match.id].each do |result|
-                    - user = User.find(result[:user_id])
-                    - user_prediction = Prediction.where(user_id: result[:user_id], match_id: match.id).first
+                    - user = @presenter.users.find { |u| u.id === result[:user_id] }
+                    - user_prediction = @presenter.user_prediction(match.id, result[:user_id])
                     - prediction_text = user_prediction.present? ? user_prediction.short_text : '-'
                     - icon_for_result = result[:match_result] ? right_prediction_icon : wrong_prediction_icon
                     - icon_for_score = result[:score] ? right_prediction_icon : wrong_prediction_icon
@@ -90,7 +90,7 @@
                         | #{user.nick_name}
                         .text-gray-small #{prediction_text}
                       td.d-none.d-md-table-cell #{user.nick_name}
-                      - user_prediction = Prediction.where(user_id: result[:user_id], match_id: match.id).first
+                      - user_prediction = @presenter.user_prediction(match.id, result[:user_id])
                       - prediction_text = user_prediction.present? ? user_prediction.short_text : '-'
                       td.d-none.d-md-table-cell #{prediction_text}
                       td.d-none.d-md-table-cell
