--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -1,8 +1,10 @@
 .predictions-card {
   text-align: center;
-  color: darkgrey;
+  color: #666666;
   background-color: white;
-  border-radius: 0;
+  border-radius: 3px;
+  border: 0;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07);
 }
 
 .predictions-card__header {
@@ -229,9 +231,10 @@
 }
 
 .profile-card {
-  border-radius: 0;
-  //background-color: #015386;
+  border-radius: 3px;
+  border: 0;
   color: white;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07);
 }
 
 .profile-card__info-row {
@@ -262,7 +265,7 @@
 
 .profile-card__info-container {
   padding-left: 29.25px;
-  color: darkgrey;
+  color: #666666;
 }
 
 .profile-card__link {
