--- a/app/views/user/dashboard/_profile_card.html.slim
+++ b/app/views/user/dashboard/_profile_card.html.slim
@@ -23,17 +23,17 @@
         .profile-card__rankings-header Your current rankings:
         .profile-card__rankings.d-flex
           - @presenter.groups.each do |group|
-            .pr-3.mr-3.rankings__group-container.d-flex.flex-column.justify-content-between
+            .pr-3.mr-3.rankings__group-container.d-flex.flex-column.justify-content-end
               - rank = @presenter.current_standing[group.id][:rank]
               - points = @presenter.current_standing[group.id][:points]
-              .rankings__group-name #{group.name}
+              .rankings__group-name.my-auto #{group.name}
               .rankings__rank #{rank}
               .rankings__point class="#{points.negative? ? 'red-text' : 'green-text'}"
                 | (#{points})
-          .pr-3.mr-3.rankings__group-container.d-flex.flex-column.justify-content-between
+          .pr-3.mr-3.rankings__group-container.d-flex.flex-column.justify-content-end
             - global_rank = @presenter.current_standing[:global][:rank]
             - global_points = @presenter.current_standing[:global][:points]
-            .rankings__group-name Global
+            .rankings__group-name.my-auto Global
             .rankings__rank #{global_rank}
             .rankings__point class="#{global_points.negative? ? 'red-text' : 'green-text'}"
               | (#{global_points})
