--- a/app/views/matches/_predictions.html.slim
+++ b/app/views/matches/_predictions.html.slim
@@ -27,7 +27,7 @@
       li.nav-item
         a.nav-link.prediction-table__pill-title id="group#{group.id}-tab" data-toggle="tab" href="#group#{group.id}match#{match.id}" role="tab" class=(index == 0 ? 'active' : '') #{group.name}
   .tab-content id='resultTabsContent'
-    - @presenter.predictions_result.each_with_index do |(group_id, results), index|
+    - @presenter.predictions_result(match).each_with_index do |(group_id, results), index|
       .tab-pane.fade id="group#{group_id}match#{match.id}" role="tabpanel" class=(index == 0 ? 'show active' : '')
         .table-responsive
           table.table.table-striped.prediction-table
@@ -49,7 +49,7 @@
                 td.text-gray-extra-small.prediction-table__help-text #{result_header_subtext}
 
             tbody.text-center
-              - results[match.id].each do |result|
+              - results.each do |result|
                 - user = @presenter.users.find { |u| u.id === result[:user_id] }
                 - user_prediction = @presenter.user_prediction(match.id, result[:user_id])
                 - prediction_text = user_prediction.present? ? user_prediction.short_text : '-'
