--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@ html {
 
 .header-bg {
   background-color: #D30208;
-  background: asset-url('WC_bg.jpg') no-repeat;
+  background-image: asset-url('WC_bg.jpg'), linear-gradient(to right, #890d0a 0%,#eb212e 50%,#8a0a00 100%);
   background-size: cover;
   position: relative;
   box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.5);
@@ -29,6 +29,11 @@ html {
   border-bottom: 2px solid #e5c685;
   border-bottom-left-radius: 50% 20%;
   border-bottom-right-radius: 50% 20%;
+
+  @include media-breakpoint-down(sm) {
+    background-size: contain;
+    background-repeat: repeat;
+  }
 }
 
 .navbar-logo {
