Show a notice for pre quarter matches

--- a/app/views/user/dashboard/_predictions_card.html.slim
+++ b/app/views/user/dashboard/_predictions_card.html.slim
@@ -1,4 +1,9 @@
 .card.predictions-card.mb-3
+  .prediction-card__notice.p-3
+    strong Pre-Quarter matches are now open for predictions!
+    .prediction-card__notice-sub-text.mt-1
+      strong Note:&nbsp;&nbsp;
+      | You will now be predicting match decider (RT/ET/PS) as well for a cost of 10 points
   .card-header.predictions-card__header
     h5 Your Predictions
     .prediction-card-header__sub-title
