--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -7,6 +7,17 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.07);
 }
 
+.prediction-card__notice {
+  font-size: 15px;
+  background-color: greenyellow;
+  text-align: center;
+}
+
+.prediction-card__notice-sub-text {
+  font-size: small;
+  text-align: center;
+}
+
 .predictions-card__header {
   background-color: white;
   border-radius: 0;
