Change predictions card notice bg color

--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -9,7 +9,7 @@
 
 .prediction-card__notice {
   font-size: 15px;
-  background-color: greenyellow;
+  background-color: #00FF87;
   text-align: center;
 }
 
