--- a/app/views/user/dashboard/_predictions_card.html.slim
+++ b/app/views/user/dashboard/_predictions_card.html.slim
@@ -1,9 +1,9 @@
 .card.predictions-card.mb-3
-  / .prediction-card__notice.p-3
-  /   strong Pre-Quarter matches are now open for predictions!
-  /   .prediction-card__notice-sub-text.mt-1
-  /     strong Note:&nbsp;&nbsp;
-  /     | You will now be predicting match decider (RT/ET/PS) as well for a cost of 10 points
+  .prediction-card__notice.p-3
+    strong Quarter-final matches are now open for predictions!
+    .prediction-card__notice-sub-text.mt-1
+      strong Points split:&nbsp;&nbsp;
+      | Winner: 20, Score:20 , Decider: 10
   .card-header.predictions-card__header
     h5 Your Predictions
     .prediction-card-header__sub-title
