Update prediction notice background and font color

--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -8,8 +8,9 @@
 }
 
 .prediction-card__notice {
+  color: white;
   font-size: 15px;
-  background-color: #00FF87;
+  background: linear-gradient(to right, #2993FC , #61bffd, #2993FC);
   text-align: center;
 }
 
