Minor update to  prediction notice

--- a/app/views/user/dashboard/_predictions_card.html.slim
+++ b/app/views/user/dashboard/_predictions_card.html.slim
@@ -1,6 +1,6 @@
 .card.predictions-card.mb-3
   .prediction-card__notice.p-3
-    strong Quarter-final matches are now open for predictions!
+    strong We are currently in Quarter-final stage!
     .prediction-card__notice-sub-text.mt-1
       strong Points split:&nbsp;&nbsp;
       | Winner: 20, Score: 20, Decider: 10
