--- a/app/views/user/dashboard/_predictions_card.html.slim
+++ b/app/views/user/dashboard/_predictions_card.html.slim
@@ -1,9 +1,9 @@
 .card.predictions-card.mb-3
   .prediction-card__notice.p-3
-    strong We are currently in Quarter-final stage!
+    strong We are currently in Semi-final stage!
     .prediction-card__notice-sub-text.mt-1
       strong Points split:&nbsp;&nbsp;
-      | Winner: 20, Score: 20, Decider: 10
+      | Winner: 30, Score: 20, Decider: 10
   .card-header.predictions-card__header
     h5 Your Predictions
     .prediction-card-header__sub-title
