Update notice and background for semifinal stage

--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -10,7 +10,7 @@
 .prediction-card__notice {
   color: white;
   font-size: 15px;
-  background: linear-gradient(to right, #2993FC , #61bffd, #2993FC);
+  background: linear-gradient(to right, #931ED1 , #c551d1, #931ED1);
   text-align: center;
 }
 
