--- a/app/views/user/dashboard/_predictions_card.html.slim
+++ b/app/views/user/dashboard/_predictions_card.html.slim
@@ -1,8 +1,8 @@
 .card.predictions-card.mb-3
   .prediction-card__notice.p-3
-    strong We are currently in Semi-final stage!
+    strong Its the Semi-finals!
     .prediction-card__notice-sub-text.mt-1
-      strong Points split:&nbsp;&nbsp;
+      strong New points :&nbsp;&nbsp;
       | Winner: 30, Score: 20, Decider: 10
   .card-header.predictions-card__header
     h5 Your Predictions
