Fix issue in css file

--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -111,12 +111,12 @@
 
 .match-card__left-flag {
   margin-left: 5px;
-  #border-right: 3px solid white;
+  border-right: 3px solid white;
 }
 
 .match-card__right-flag {
   margin-right: 5px;
-  #border-left: 3px solid white;
+  border-left: 3px solid white;
 }
 
 .match-card__kick-off {
