--- a/app/assets/stylesheets/users/dashboard_v2.scss
+++ b/app/assets/stylesheets/users/dashboard_v2.scss
@@ -69,12 +69,12 @@
 
 .match-card-header__left-flag {
   margin-left: 5px;
-  #border-right: 3px solid white;
+  border-right: 3px solid white;
 }
 
 .match-card-header__right-flag {
   margin-right: 5px;
-  #border-left: 3px solid white;
+  border-left: 3px solid white;
 }
 
 .match-card-header__kick-off {
