Remove final banner

--- a/app/views/user/dashboard/_predictions_card.html.slim
+++ b/app/views/user/dashboard/_predictions_card.html.slim
@@ -1,13 +1,13 @@
 .card.predictions-card.mb-3
-  .container-fluid
-    .predictions-card__notice-container.row
-      .prediction-card__notice.col-9.text-left
-        h4.mb-0 Its the Finals!
-        .prediction-card__notice-sub-text
-          strong New points :&nbsp;&nbsp;
-          | Winner: 70, Score: 20, Decider: 10
-      .col-3.text-right
-        =image_tag 'trophy.png', class: 'predictions-card__notice-icon'
+  / .container-fluid
+  /   .predictions-card__notice-container.row
+  /     .prediction-card__notice.col-9.text-left
+  /       h4.mb-0 Its the Finals!
+  /       .prediction-card__notice-sub-text
+  /         strong New points :&nbsp;&nbsp;
+  /         | Winner: 70, Score: 20, Decider: 10
+  /     .col-3.text-right
+  /       =image_tag 'trophy.png', class: 'predictions-card__notice-icon'
   .card-header.predictions-card__header
     h5 Your Predictions
     .prediction-card-header__sub-title
